[gd_scene load_steps=6 format=2]

[ext_resource path="res://menus/MSelectGame.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/dynamic/h1_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://minesweeper/gui/GrassTileMap.tscn" type="PackedScene" id=4]

[sub_resource type="OpenSimplexNoise" id=2]
octaves = 1
period = 200.0

[node name="MSelectGame" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 250, 150 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 774.0
margin_top = 450.0
margin_right = 1274.0
margin_bottom = 750.0
rect_min_size = Vector2( 500, 300 )
rect_pivot_offset = Vector2( 250, 150 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 500.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "DÃ©mineur"
align = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 80.0
margin_right = 500.0
margin_bottom = 84.0

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer"]
margin_top = 88.0
margin_right = 500.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="button9x9" type="Button" parent="Panel/VBoxContainer/GridContainer"]
margin_right = 248.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "9x9"

[node name="button15x15" type="Button" parent="Panel/VBoxContainer/GridContainer"]
margin_left = 252.0
margin_right = 500.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "15x15"

[node name="button24x24" type="Button" parent="Panel/VBoxContainer/GridContainer"]
margin_top = 108.0
margin_right = 248.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "24x24"

[node name="buttoncustom" type="Button" parent="Panel/VBoxContainer/GridContainer"]
margin_left = 252.0
margin_top = 108.0
margin_right = 500.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Custom"

[node name="GrassTileMap" parent="." instance=ExtResource( 4 )]
tile_data = PoolIntArray(  )
noise = SubResource( 2 )

[connection signal="resized" from="." to="." method="_on_Control_resized"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/button9x9" to="." method="_on_button9x9_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/button15x15" to="." method="_on_button15x15_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/button24x24" to="." method="_on_button24x24_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/buttoncustom" to="." method="_on_buttoncustom_pressed"]
